--- a/graph.html
+++ b/graph.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Spatial Graphs</title>
-	<!-- <link href="style.css" rel="stylesheet"> --!>
+	<link href="style.css" rel="stylesheet"> 
   <style type="text/css" media="screen">
     body { background:#eee; margin:1em; text-align:center; }
     canvas { display:block; margin:1em auto; background:#fff; border:1px solid #ccc; z-index:-1; }
